Alteracao das configuracoes de salvamento de arquivos bloob na base
